autotests/syntax-tests/tests/negative/negative119.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var Name # Name 'chars' 123 = Name $ENUM Name Name ; = ; } ; 